--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^8.5.0",
     "react": "^18.2.0",
-    "react-anchor-link-smooth-scroll-v2": "^2.0.1",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
