--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "framer-motion": "^8.5.0",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "typescript": "^5.0.0-beta"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
