--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "framer-motion": "^8.5.0",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
