--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
+    "react-hook-inview": "^4.5.0",
     "typescript": "^5.0.0-beta"
   },
   "devDependencies": {
